[gd_scene load_steps=21 format=3 uid="uid://i5wqqb7rnubc"]

[ext_resource type="Script" path="res://src/main.gd" id="1_fgkeu"]
[ext_resource type="Script" path="res://src/player.gd" id="1_ji48a"]
[ext_resource type="Shape2D" uid="uid://dp4vxi575ml5m" path="res://collision_shapes/horizonal_wall_collision.tres" id="2_mfngk"]
[ext_resource type="Script" path="res://src/wall.gd" id="3_4rowq"]
[ext_resource type="Shape2D" uid="uid://d3bnq5u8foyj5" path="res://collision_shapes/vertical_wall_collision.tres" id="3_ab31u"]
[ext_resource type="Texture2D" uid="uid://dj7xms3m0a8fv" path="res://images/Player_Cannon.png" id="3_eji7f"]
[ext_resource type="Texture2D" uid="uid://dayc3aifsc7ny" path="res://images/Hexagon.png" id="3_ygnfo"]
[ext_resource type="AudioStream" uid="uid://be06h8r1yh42i" path="res://audio/hexagon_getting_hit.wav" id="5_0o6jl"]
[ext_resource type="AudioStream" uid="uid://8m01hm2j4cgm" path="res://audio/hexagon_shooting.wav" id="6_8xfvc"]
[ext_resource type="Script" path="res://src/energy_left_bar.gd" id="6_rgcsu"]
[ext_resource type="FontFile" uid="uid://ctrrksojqtxhb" path="res://fonts/homevideo.ttf" id="8_5jn85"]
[ext_resource type="Script" path="res://src/time_label.gd" id="9_iccux"]
[ext_resource type="Script" path="res://src/bullet_bar.gd" id="10_bnoa4"]
[ext_resource type="Script" path="res://src/energy_used.gd" id="11_6b4v8"]
[ext_resource type="Script" path="res://src/legal_button.gd" id="12_bh3rl"]
[ext_resource type="FontFile" uid="uid://cs7o1i14fu151" path="res://fonts/Unitblock-JpJma.ttf" id="13_g5git"]
[ext_resource type="Script" path="res://src/legal_text.gd" id="14_bupsn"]
[ext_resource type="AudioStream" uid="uid://tonu3ajmf11c" path="res://audio/button_press.wav" id="15_j64fg"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ifwmj"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("6_8xfvc")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_22tb3"]
random_pitch = 2.0
streams_count = 1
stream_0/stream = ExtResource("15_j64fg")

[node name="Main" type="Node2D"]
process_mode = 1
script = ExtResource("1_fgkeu")
metadata/_edit_lock_ = true

[node name="Player" type="CharacterBody2D" parent="."]
process_mode = 1
visible = false
position = Vector2(600, 700)
rotation = -1.5708
script = ExtResource("1_ji48a")
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PackedVector2Array(10, -17, -10, -17, -20, 0, -10, 17, 10, 17, 20, 0)
metadata/_edit_lock_ = true

[node name="Hexagon" type="Sprite2D" parent="Player"]
texture = ExtResource("3_ygnfo")
metadata/_edit_lock_ = true

[node name="PlayerGun" type="Sprite2D" parent="Player"]
position = Vector2(16, 0)
scale = Vector2(30, 10)
texture = ExtResource("3_eji7f")
metadata/_edit_lock_ = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("5_0o6jl")

[node name="ShootSound" type="AudioStreamPlayer2D" parent="Player"]
stream = SubResource("AudioStreamRandomizer_ifwmj")

[node name="UpWall" type="Area2D" parent="."]
position = Vector2(500, 5)
script = ExtResource("3_4rowq")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="UpWall"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -5.0
offset_right = 700.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpWall"]
position = Vector2(100, 0)
shape = ExtResource("2_mfngk")
metadata/_edit_lock_ = true

[node name="DownWall" type="Area2D" parent="."]
position = Vector2(600, 795)
script = ExtResource("3_4rowq")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="DownWall"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -5.0
offset_right = 600.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownWall"]
shape = ExtResource("2_mfngk")
metadata/_edit_lock_ = true

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(1195, 500)
script = ExtResource("3_4rowq")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="RightWall"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -500.0
offset_right = 5.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(0, -100)
shape = ExtResource("3_ab31u")
metadata/_edit_lock_ = true

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2(5, 400)
script = ExtResource("3_4rowq")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="LeftWall"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -400.0
offset_right = 5.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = ExtResource("3_ab31u")
metadata/_edit_lock_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
metadata/_edit_lock_ = true

[node name="EnergyUsed" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 30.0
offset_top = 719.0
offset_right = 924.0
offset_bottom = 789.0
theme_override_fonts/normal_font = ExtResource("8_5jn85")
theme_override_font_sizes/normal_font_size = 48
text = "Energy used in menu: 0"
script = ExtResource("11_6b4v8")

[node name="EnergyBar" type="ColorRect" parent="UI"]
layout_mode = 0
offset_top = 800.0
offset_right = 1200.0
offset_bottom = 840.0
color = Color(1, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="EnergyLeftBar" type="ColorRect" parent="UI/EnergyBar"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 40.0
color = Color(0, 1, 0, 1)
script = ExtResource("6_rgcsu")
metadata/_edit_lock_ = true

[node name="TimeLabel" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 0
offset_top = 840.0
offset_right = 644.0
offset_bottom = 932.0
theme_override_fonts/normal_font = ExtResource("8_5jn85")
theme_override_font_sizes/normal_font_size = 96
text = "HHH:MM:SS.T"
script = ExtResource("9_iccux")

[node name="BulletBar" type="ColorRect" parent="UI"]
layout_direction = 3
layout_mode = 0
offset_left = -1680.0
offset_top = 925.0
offset_right = -1200.0
offset_bottom = 975.0
rotation = 3.14159
color = Color(0, 0.690196, 1, 1)
script = ExtResource("10_bnoa4")

[node name="Title" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 96.0
offset_right = 1190.0
offset_bottom = 210.0
theme_override_fonts/normal_font = ExtResource("8_5jn85")
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[center][color=#00b0ff]The Last Hexagon"
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 190.0
offset_top = 300.0
offset_right = 990.0
offset_bottom = 550.0
metadata/_edit_lock_ = true

[node name="HoverSound" type="AudioStreamPlayer" parent="UI/VBoxContainer"]
stream = SubResource("AudioStreamRandomizer_22tb3")

[node name="PlayButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("8_5jn85")
theme_override_font_sizes/font_size = 96
text = "Play"
metadata/_edit_lock_ = true

[node name="LegalButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("8_5jn85")
theme_override_font_sizes/font_size = 96
text = "Legal"
script = ExtResource("12_bh3rl")
metadata/_edit_lock_ = true

[node name="LegalRect" type="ColorRect" parent="UI/VBoxContainer/LegalButton"]
visible = false
layout_mode = 0
offset_left = -581.0
offset_top = -289.0
offset_right = 597.0
offset_bottom = 489.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="LegalText" type="RichTextLabel" parent="UI/VBoxContainer/LegalButton"]
visible = false
layout_mode = 0
offset_left = -579.0
offset_top = -289.0
offset_right = 597.0
offset_bottom = 489.0
theme_override_fonts/normal_font = ExtResource("13_g5git")
theme_override_font_sizes/normal_font_size = 36
text = "Test"
script = ExtResource("14_bupsn")

[node name="CloseButton" type="Button" parent="UI/VBoxContainer/LegalButton"]
visible = false
layout_mode = 0
offset_left = -173.0
offset_top = 553.0
offset_right = 123.0
offset_bottom = 648.0
theme_override_fonts/font = ExtResource("8_5jn85")
theme_override_font_sizes/font_size = 96
text = "Close"
metadata/_edit_lock_ = true

[node name="EnemyTimer" type="Timer" parent="."]
process_callback = 0

[connection signal="bullet_shot" from="Player" to="UI/BulletBar" method="set_size_x"]
[connection signal="energy_changed" from="Player" to="UI/EnergyBar/EnergyLeftBar" method="set_size_x"]
[connection signal="no_energy_left" from="Player" to="." method="_end_game"]
[connection signal="no_energy_left" from="Player" to="Player" method="_stop"]
[connection signal="no_energy_left" from="Player" to="UI/EnergyUsed" method="_turn_on"]
[connection signal="no_energy_left" from="Player" to="UI/Title" method="show"]
[connection signal="no_energy_left" from="Player" to="UI/VBoxContainer" method="show"]
[connection signal="no_energy_left" from="Player" to="EnemyTimer" method="stop"]
[connection signal="area_entered" from="UpWall" to="UpWall" method="_figure_out_impact"]
[connection signal="area_entered" from="DownWall" to="DownWall" method="_figure_out_impact"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_figure_out_impact"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_figure_out_impact"]
[connection signal="mouse_entered" from="UI/VBoxContainer/PlayButton" to="UI/VBoxContainer/HoverSound" method="play"]
[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="." method="_start_game"]
[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="Player" method="_start"]
[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="UI/EnergyUsed" method="_turn_off"]
[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="UI/TimeLabel" method="show"]
[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="UI/Title" method="hide"]
[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="UI/VBoxContainer" method="hide"]
[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="EnemyTimer" method="start"]
[connection signal="mouse_entered" from="UI/VBoxContainer/LegalButton" to="UI/VBoxContainer/HoverSound" method="play"]
[connection signal="pressed" from="UI/VBoxContainer/LegalButton" to="UI/VBoxContainer/LegalButton" method="_show"]
[connection signal="mouse_entered" from="UI/VBoxContainer/LegalButton/CloseButton" to="UI/VBoxContainer/HoverSound" method="play"]
[connection signal="pressed" from="UI/VBoxContainer/LegalButton/CloseButton" to="UI/VBoxContainer/LegalButton" method="_close"]
[connection signal="timeout" from="EnemyTimer" to="." method="_spawn_enemy"]
